# snaplet-fetch

./: Application.hs  Askin.cabal  LICENSE  Main.hs  README.md  Site.hs  StaticDoc.hs  snaplet-fetch.cabal
example/: Site.hs
resources/: snaplet.cfg
src/Snap/Snaplet/: Fetch.hs
