Name:                snaplet-fetch
Version:             0.2.0
Synopsis:            Snaplet-fetch serves markdown files injected into a template
Description: 	     Snaplet-fetch takes a document root containing images or markdown
		     files and will convert the markdown files to html before injecting
		     them into a specified template theme.
License:             BSD3
license-file:        LICENSE
Author:              Jeffrey Drake
Maintainer:          drakej@uwindsor.ca
Copyright:           ©2012 by Jeffrey Drake
Category:            Web
Build-type:          Simple
Extra-source-files:  README, LICENSE

Cabal-version:       >=1.6

data-files:
  resources/devel.cfg

source-repository head
  type:     git
  location: https://github.com/iaefai/snaplet-fetch.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.Fetch

  other-modules:
    Paths_snaplet_fetch

  build-depends:
    base 		       >= 4.5     && < 5,
    old-time,
    directory,
    pandoc                     >= 1.9     && < 2, 
    configurator,
    optparse-applicative, 
    text, 
    MonadCatchIO-transformers,
    snap-core                  >= 0.9,
    snap-server                >= 0.9, 
    bytestring,
    snap-loader-static         >= 0.9, 
    snap-loader-dynamic        >= 0.9,
    snap                       >= 0.9, 
    snap-core                  >= 0.9,
    data-lens-template         >= 2.1.5, 
    heist                      >= 0.8, 
    filepath                   >= 1.2, 
    xmlhtml                    >= 0.2.0.2,
    transformers               >= 0.3.0.0


  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind

